[package]
name = "dota-agent-cli"
version = "2.0.0"
edition = "2024"
description = "Live provider-backed Dota 2 knowledge and live-match CLI for agent-friendly hero, item, match state, and source lookups"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rustyline = "14"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3"
